# Socket

Socket_Rete/: CMakeLists.txt
Socket_Rete/include/: Network.h  Network_B.h
Socket_Rete/src/: Network.cpp  Network_B.cpp  main.cpp
Socket_Rete_BOTH/: CMakeLists.txt
Socket_Rete_BOTH/include/: wireless_communicator.h~
Socket_Rete_BOTH/old_mattias_file/: main_mattia.cpp  wireless_communicator_old.cpp
Socket_Rete_BOTH/src/: main.cpp  main.cpp~  wireless_communicator.cpp  wireless_communicator.cpp~
Socket_Rete_rasp/include/: imuboard_commands.h  wireless_communicator.h  wireless_communicator.h~
Socket_Rete_rasp/old_mattias_file/: wireless_communicator.h
Socket_Rete_rasp/src/: imuboard_communications.cpp  main.cpp  main.cpp~  wireless_communicator.cpp  wireless_communicator.cpp~
